simple/nada/inque.yaml
#
# Simple Connectionless using Istio
#
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: inque-v001
  labels:
    app: inque
    version: Iv001
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: inque
        version: Iv001
    spec:
      containers:
      - name: inque
        image: maroda/craque:Iv001
        ports:
          - containerPort: 7777
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: inque
  labels:
    app: inque
    service: inque
spec:
  selector:
    app: inque
  ports:
  - port: 7777
    name: http
