simple/nada/inque-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: inque-gw
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: inque
spec:
  hosts:
  - "*"
  gateways:
  - inque-gw
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: inque
        port:
          number: 7777
